ECA-553: break out updating timer to new method instead to work around changed transaction handling in JBoss 4.2.0 that caused userTransaction to fail.
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@4621 37aeb1de-b14b-0410-9a0e-82b28170d228